--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="use_positions">Use Positions</string>
     <string name="delete_selected">Delete Selected</string>
     <string name="title_activity_list_view_removal_animation">ListViewRemovalAnimation</string>
+    <string name="title_activity_list_view_cell_insertion">ListViewCellInsertionActivity</string>
 
 </resources>
