- DevBytes: ListView Cell Dragging and Rearranging - Rectified a bug on Android L where the switchViews won't change their visibility to View.Visible. Soln is to modify the StableArrayAdapter#hasStableIds() method.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="delete_selected">Delete Selected</string>
     <string name="title_activity_list_view_removal_animation">ListViewRemovalAnimation</string>
     <string name="title_activity_list_view_cell_insertion">ListViewCellInsertionActivity</string>
+    <string name="title_activity_list_view_dragging">ListViewDraggingActivity</string>
 
 </resources>
